--- a/gunicorn.conf
+++ b/gunicorn.conf
@@ -8,4 +8,4 @@ setuid ubuntu
 setgid www-data
 chdir /home/ubuntu/cp-api/cp
 
-exec env/bin/gunicorn --workers 3 --bind unix:/home/ubuntu/cp-api/cp.sock cp.wsgi:application
+exec ../env/bin/gunicorn --workers 3 --bind unix:/home/ubuntu/cp-api/cp/cp.sock cp.wsgi:application
